--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -1,6 +1,5 @@
 # This workflow will install pydm dependencies and run the test suite for all combinations
 # of operating systems and version numbers specified in the matrix
-
 name: Build Status
 
 on:
@@ -27,27 +26,88 @@ jobs:
       QT_MAC_WANTS_LAYER: 1  # PyQT gui tests involving qtbot interaction on macOS will fail without this
 
     steps:
+    - name: Install packages for testing a Python Qt app on Linux
+      shell: bash -el {0}
+      run: |
+        if [ "$RUNNER_OS" == "Linux" ]; then
+          sudo apt update
+          sudo apt install -y xvfb herbstluftwm libxkbcommon-x11-0 libxcb-icccm4 libxcb-image0 libxcb-keysyms1 libxcb-randr0 libxcb-render-util0 libxcb-xinerama0 libxcb-xfixes0 x11-utils
+          sudo /sbin/start-stop-daemon --start --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -screen 0 1024x768x24 -ac +extension GLX +render -noreset
+          sleep 3
+          sudo /sbin/start-stop-daemon --start --pidfile /tmp/custom_herbstluftwm_99.pid --make-pidfile --background --exec /usr/bin/herbstluftwm
+          sleep 1
+        fi
+
     - uses: actions/checkout@v4
-    - name: Setup conda
+    - name: Setup Conda and install PyQt5
       uses: conda-incubator/setup-miniconda@v3
       with:
         python-version: ${{ matrix.python-version }}
         miniforge-variant: Miniforge3
         miniforge-version: latest
-        activate-environment: pydm-env
+        activate-environment: pyqt-env
         conda-remove-defaults: true
         architecture: x64  # Ensure macOS finds PyQt 5.12.3 which isn't available with osx-arm64
 
-    - name: Install PyDM with Mamba
+    - name: Install PyQt5 and PyDM with Mamba (if windows use conda)
       shell: bash -el {0}
       run: |
         if [ "$RUNNER_OS" == "Windows" ]; then
-          conda install -c conda-forge pydm pyqt=${{ matrix.pyqt-version }} pyside6
+          conda install -c conda-forge pydm pyqt=${{ matrix.pyqt-version }} 
         else
-          mamba install -c conda-forge pydm pyqt=${{ matrix.pyqt-version }} pyside6
+          mamba install -c conda-forge pydm pyqt=${{ matrix.pyqt-version }}
         fi
 
-    - name: Install additional Python dependencies with pip
+    - name: Install additional Python dependencies with pip for PyQt5
+      shell: bash -el {0}
+      run: |
+        pip install -r requirements.txt
+        if [ "$RUNNER_OS" == "Windows" ]; then
+          pip install -r windows-dev-requirements.txt
+        else
+          pip install -r dev-requirements.txt
+        fi
+  
+    - name: Run PyQt tests with pytest
+      env:
+        QT_API: pyqt5
+      shell: bash -el {0}
+      timeout-minutes: 30 # timeout applies to single run of run_tests.py, not all os/python combos
+      run: |
+        echo "Running PyQt tests with QT_API=$QT_API"
+        python -c "import PyQt5.QtCore; print('PyQt5 is installed and working')"
+        python run_tests.py
+
+    - name: Remove existing Miniconda installation on Windows (error workaround)
+      if: runner.os == 'Windows'
+      shell: powershell
+      run: |
+        $condaPath = "C:\Users\runneradmin\miniconda3"
+        if (Test-Path $condaPath) {
+          Remove-Item -Recurse -Force $condaPath
+        }
+
+    - name: Setup Conda and install PySide6
+      uses: conda-incubator/setup-miniconda@v3
+      with:
+        python-version: ${{ matrix.python-version }}
+        miniforge-variant: Miniforge3
+        miniforge-version: latest
+        activate-environment: pyside-env
+        conda-remove-defaults: true
+        architecture: x64 # Ensure macOS finds PyQt 5.12.3 which isn't available with osx-arm64
+        auto-update-conda: true
+
+    - name: Install PySide6 and PyDM with Mamba (if windows use conda)
+      shell: bash -el {0}
+      run: |
+        if [ "$RUNNER_OS" == "Windows" ]; then
+          conda install -c conda-forge pyside6 pydm
+        else
+          mamba install -c conda-forge pyside6 pydm
+        fi
+
+    - name: Install additional Python dependencies with pip for PySide6
       shell: bash -el {0}
       run: |
         pip install -r requirements.txt
@@ -57,24 +117,11 @@ jobs:
           pip install -r dev-requirements.txt
         fi
 
-    - name: Install packages for testing a PyQt app on Linux
-      shell: bash -el {0}
-      run: |
-        if [ "$RUNNER_OS" == "Linux" ]; then
-          sudo apt update
-          sudo apt install -y xvfb herbstluftwm libxkbcommon-x11-0 libxcb-icccm4 libxcb-image0 libxcb-keysyms1 libxcb-randr0 libxcb-render-util0 libxcb-xinerama0 libxcb-xfixes0 x11-utils libegl1 libopengl0
-          sudo /sbin/start-stop-daemon --start --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -screen 0 1024x768x24 -ac +extension GLX +render -noreset
-          sleep 3
-          sudo /sbin/start-stop-daemon --start --pidfile /tmp/custom_herbstluftwm_99.pid --make-pidfile --background --exec /usr/bin/herbstluftwm
-          sleep 1
-        fi
-
-    - name: Test with pytest (pyqt5/qt5)
+    - name: Run PySide6 tests with pytest
       env:
-        QT_API: pyqt5
+        QT_API: pyside6
       shell: bash -el {0}
-      timeout-minutes: 30 # timeout applies to single run of run_tests.py, not all os/python combos
+      timeout-minutes: 30
       run: |
-        echo "QT_API=$QT_API"
-        python -c "import PyQt5.QtCore; print('PyQt5 is installed and working')"
-        python run_tests.py
+        echo "Running PySide6 tests with QT_API=$QT_API"
+        python -c "import PySide6.QtCore; print('PySide6 is installed and working')"
