DOC: first additions to docs about pyside6, also add tag for parts of codebase where we do pyqt5/pyside6 specific things.

--- a/conda-recipe/meta.yaml
+++ b/conda-recipe/meta.yaml
@@ -44,7 +44,7 @@ about:
   license_file: LICENSE.md
   summary: 'Python Display Manager'
   description: |
-    PyDM is a PyQt-based framework for building user interfaces for control systems.
+    PyDM is a Python-Qt based framework for building user interfaces for control systems.
     The goal is to provide a no-code, drag-and-drop system to make simple screens,
     as well as a straightforward Python framework to build complex applications.
   doc_url: https://slaclab.github.io/pydm/
