--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,13 +6,10 @@ repos:
         files: '\.(py|txt)$' # Only run on .py and .txt files	
     -   id: trailing-whitespace
         files: '\.(py|txt)$' # Only run on .py and .txt files
--   repo: https://github.com/psf/black
-    rev: 23.7.0
-    hooks:
-    -   id: black
-        args: [--line-length, '120']
 -   repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.0.287
+    rev: v0.11.2
     hooks:
     -   id: ruff
         args: [--line-length, '120', --fix, --exit-non-zero-on-fix]
+    -   id: ruff-format
+        args: [--line-length, '120']
