MNT: add spell checking precommit check using codespell tool

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,3 +13,9 @@ repos:
         args: [--line-length, '120', --fix, --exit-non-zero-on-fix]
     -   id: ruff-format
         args: [--line-length, '120']
+repos:
+  - repo: https://github.com/codespell-project/codespell
+    rev: v2.4.1
+    hooks:
+      - id: codespell
+        args: ["--write-changes", "-L", "slac"]
