MNT: disable sometimes failing test on macOS, just for now until it gets fixed

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -74,4 +74,8 @@ jobs:
       shell: bash -el {0}
       timeout-minutes: 30 # timeout applies to single run of run_tests.py, not all os/python combos
       run: |
-        python run_tests.py
+        if [ "$RUNNER_OS" == "macOS" ]; then
+          python run_tests.py --ignore=pydm/tests/widgets/test_slider.py # disable just for now, until fix intermittent issue
+        else 
+          python run_tests.py
+        fi
