--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,4 +15,4 @@ repos:
     rev: v0.0.287
     hooks:
     -   id: ruff
-        args: [--line-length, '120', --fix, --exit-non-zero-on-fix]
+        args: [--line-length, '120', --fix, --exit-non-zero-on-fix, --select, TID] # TID = fix and enforce absolute imports
