BLD: Install optional dependencies during macOS test workflow again. Only Windows doesn't have support for the other optional EPICS client packages now.

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -52,10 +52,10 @@ jobs:
     - name: Install additional Python dependencies with pip
       shell: bash -el {0}
       run: |
-        if [ "$RUNNER_OS" == "Linux" ]; then
-          pip install .[test]
-        else
+        if [ "$RUNNER_OS" == "Windows" ]; then
           pip install .[test-no-optional]
+        else
+          pip install .[test]
         fi
 
     - name: Install packages for testing a PyQt app on Linux
