BLD: Install p4p from PyPI during the macOS test run workflow

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -44,7 +44,7 @@ jobs:
         if [ "$RUNNER_OS" == "Windows" ]; then
           conda install -c conda-forge pydm pyqt=${{ matrix.pyqt-version }}
         elif [ "$RUNNER_OS" == "macOS" ]; then
-          mamba install -c conda-forge pydm pyqt=${{ matrix.pyqt-version }} git p4p
+          mamba install -c conda-forge pydm pyqt=${{ matrix.pyqt-version }} git
         else
           mamba install -c conda-forge pydm pyqt=${{ matrix.pyqt-version }}
         fi
